--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -12,12 +12,19 @@ jobs:
     permissions:
       contents: write
 
+    outputs:
+      new_release_published: ${{ steps.release.outputs.new_release_published }}
+      new_release_major_version: ${{ steps.release.outputs.new_release_major_version }}
+      new_release_minor_version: ${{ steps.release.outputs.new_release_minor_version }}
+      new_release_patch_version: ${{ steps.release.outputs.new_release_patch_version }}
+
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
     - name: Python Semantic Release
-      uses: relekang/python-semantic-release@master
+      id: release
+      uses: aasseman/python-semantic-release@gh_outputs
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
